--- a/README
+++ b/README
@@ -1,1 +1,8 @@
+개발시기 : 2016년 2017년
 
+javasctip를 배우기 시작하면서 html로 ui를 바로 확인 할 수 있는 매력에 많이 만들어 보려고 했다.
+
+게임들은 다양하나 소스는 간략함과 최적화에 중점을 두어 개발을 하였기 때문에
+가독성이 매우 안좋다.
+
+javascriptGames이 나를 프로그래머로서 한층 성장하게 해주는 발판이 되었다.
